# Logmera

./: LICENSE.txt  README.md  pyproject.toml  setup.py
logmera/: __init__.py  api.py  cli.py  database.py  main.py  models.py  schemas.py  sdk.py
logmera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logmera/dashboard/: app.js  index.html  styles.css
