[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logmera"
version = "0.1.2"
description = "Self-hosted AI observability backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "requests>=2.31.0",
]

[project.scripts]
logmera = "logmera.cli:start"

[tool.setuptools.packages.find]
include = ["logmera*"]
